# ace-g

./: .gitignore  LICENSE  README.md  pyproject.toml  run_eval.sh  run_example.sh
configs_custom/: DINOv2_vitl.yaml  MoGU_N2_dinov2reg_dpt.yaml  dptv2_vitl.yaml  dptv2_vitl_path_0_sf14_d1024_5min.yaml  late_fusion_sanity_K1_dinov2_vitl14.yaml  latefusion_l2_unfreeze_N2_dinov2reg_dpt.yaml  listmultiencoder_freezed_latefusion_N2_dinov2_dpt.yaml  listmultiencoder_freezed_latefusion_N2_dinov2reg_dpt.yaml  listmultiencoder_freezed_latefusion_N3_dinov2reg_dpt_sela.yaml  listmultiencoder_latefusion_N3_dinov2_dpt_sela.yaml  multidino_fusion_N3_dinov2_vitl14.yaml  multidino_late_fusion_N1_dinov2_vitl14.yaml  multidino_late_fusion_N3_dinov2_vitl14.yaml  salad_dinov2_vitl14.yaml  selavpr_vitl_msls.yaml
datasets/: dataset_utils.py  setup_12scenes.py  setup_7scenes.py  setup_cambridge.py  setup_indoor6.py  setup_rio10.py
docs/: MIGRATION_README.md
dsacstar/: dsacstar.cpp  dsacstar_util.h  pyproject.toml  setup.py
dsacstar/dsacstar/: __init__.py
scripts/: _common.py  diagnose_heads.py  diagnose_heads_unc.py  register_eval.py  run_diagnose_heads.sh  run_diagnose_heads_unc.sh  run_pipeline.sh  train_scenes.py
src/ace_g/: buffer.py  configuration.py  data_io.py  datasets.py  encoders.py  eval_poses.py  eval_poses_utils.py  layers.py  losses.py  register_images.py  regressors.py  schedule.py  scr_heads.py  train_single_scene.py  utils.py  vis_dataset.py  vis_localization.py  vis_utils.py
src/ace_g/configs/: ace.yaml  ace_dino.yaml  ace_g_25min.yaml  ace_g_5min.yaml
